# apple-music-api

./: .dockerignore  AGENTS.md  API.md  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: docker-image.yml
cpp/: android_log_shim.c
crates/apple-music-api/: Cargo.toml
crates/apple-music-api/src/: client.rs  error.rs  lib.rs  logging.rs
crates/apple-music-api/src/client/: lyrics.rs  mod.rs  search.rs  web_token.rs
crates/apple-music-decryptor/: Cargo.toml
crates/apple-music-decryptor/cpp/: callbacks.cpp
crates/apple-music-decryptor/src/: config.rs  device.rs  download.rs  error.rs  lib.rs  logging.rs  session.rs
crates/apple-music-decryptor/src/ffi/: layout.rs  loader.rs  runtime.rs
crates/apple-music-downloader/: Cargo.toml  build.rs
crates/apple-music-downloader/src/: error.rs  lib.rs
crates/apple-music-downloader/src/config/: args.rs  mod.rs
crates/apple-music-downloader/src/daemon/: context.rs  mod.rs  response.rs  subsonic.rs  ui.rs
crates/apple-music-downloader/src/daemon/http/: account.rs  auth.rs  catalog.rs  mod.rs
crates/apple-music-downloader/src/daemon/subsonic/: auth.rs  data.rs  error.rs  handlers.rs  mod.rs  render.rs  service.rs
crates/apple-music-downloader/src/logging/: mod.rs
crates/apple-music-downloader/src/runtime/: state.rs
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/auth/: BearerPage.vue  SettingsPage.vue
frontend/src/components/ui/button/: index.ts
frontend/src/components/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
frontend/src/components/ui/dialog/: DialogContent.vue
frontend/src/components/ui/input/: Input.vue
frontend/src/components/ui/label/: Label.vue
frontend/src/composables/: useDaemonClient.ts
frontend/src/lib/: api.ts
src/: error.rs  launcher.rs  lib.rs
src/config/: args.rs  device.rs  mod.rs
src/daemon/: api.rs  download.rs  mod.rs  mp4.rs
src/ffi/: cpp.rs  layout.rs  loader.rs  log_shim.rs  mod.rs  runtime.rs
src/logging/: mod.rs
src/protocol/: control.rs  frame.rs  mod.rs
src/runtime/: mod.rs  session.rs  state.rs
src/server/: control.rs  decrypt.rs  mod.rs
test/: all.sh
