[package]
name = "wrapper-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "wrapper"
path = "src/bin/wrapper.rs"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.177"
libloading = "0.8.9"
num_cpus = "1.17.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }

[build-dependencies]
cc = "1.2.43"
