[workspace]
members = [
    "crates/apple-music-api",
    "crates/apple-music-decryptor",
    "crates/apple-music-downloader",
]
default-members = ["crates/apple-music-downloader"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.6"
cc = "1.2.43"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.177"
libloading = "0.8.9"
mp4ameta = "0.13.0"
num_cpus = "1.17.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["fs"] }
