[package]
name = "apple-music-decryptor"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
libloading.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
cc.workspace = true
